// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/card/demo/basic.md correctly 1`] = `
<div
  class="wmstool-card wmstool-card-bordered"
  style="width:300px"
>
  <div
    class="wmstool-card-head"
  >
    <div
      class="wmstool-card-head-wrapper"
    >
      <div
        class="wmstool-card-head-title"
      >
        Card title
      </div>
      <div
        class="wmstool-card-extra"
      >
        <a
          href="#"
        >
          More
        </a>
      </div>
    </div>
  </div>
  <div
    class="wmstool-card-body"
  >
    <div>
      <p>
        Card content
      </p>
      <p>
        Card content
      </p>
      <p>
        Card content
      </p>
    </div>
  </div>
</div>
`;

exports[`renders ./components/card/demo/border-less.md correctly 1`] = `
<div
  style="background:#ECECEC;padding:30px"
>
  <div
    class="wmstool-card"
    style="width:300px"
  >
    <div
      class="wmstool-card-head"
    >
      <div
        class="wmstool-card-head-wrapper"
      >
        <div
          class="wmstool-card-head-title"
        >
          Card title
        </div>
      </div>
    </div>
    <div
      class="wmstool-card-body"
    >
      <div>
        <p>
          Card content
        </p>
        <p>
          Card content
        </p>
        <p>
          Card content
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/card/demo/flexible-content.md correctly 1`] = `
<div
  class="wmstool-card wmstool-card-bordered wmstool-card-hoverable"
  style="width:240px"
>
  <div
    class="wmstool-card-cover"
  >
    <img
      alt="example"
      src="https://os.alipayobjects.com/rmsportal/QBnOOoLaAfKPirc.png"
    />
  </div>
  <div
    class="wmstool-card-body"
  >
    <div>
      <div
        class="wmstool-card-meta"
      >
        <div
          class="wmstool-card-meta-detail"
        >
          <div
            class="wmstool-card-meta-title"
          >
            Europe Street beat
          </div>
          <div
            class="wmstool-card-meta-description"
          >
            www.instagram.com
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/card/demo/grid-card.md correctly 1`] = `
<div
  class="wmstool-card wmstool-card-bordered wmstool-card-contain-grid"
>
  <div
    class="wmstool-card-head"
  >
    <div
      class="wmstool-card-head-wrapper"
    >
      <div
        class="wmstool-card-head-title"
      >
        Card Title
      </div>
    </div>
  </div>
  <div
    class="wmstool-card-body"
  >
    <div>
      <div
        class="wmstool-card-grid"
        style="width:25%;text-align:center"
      >
        Content
      </div>
      <div
        class="wmstool-card-grid"
        style="width:25%;text-align:center"
      >
        Content
      </div>
      <div
        class="wmstool-card-grid"
        style="width:25%;text-align:center"
      >
        Content
      </div>
      <div
        class="wmstool-card-grid"
        style="width:25%;text-align:center"
      >
        Content
      </div>
      <div
        class="wmstool-card-grid"
        style="width:25%;text-align:center"
      >
        Content
      </div>
      <div
        class="wmstool-card-grid"
        style="width:25%;text-align:center"
      >
        Content
      </div>
      <div
        class="wmstool-card-grid"
        style="width:25%;text-align:center"
      >
        Content
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/card/demo/in-column.md correctly 1`] = `
<div
  style="background:#ECECEC;padding:30px"
>
  <div
    class="wmstool-row"
    style="margin-left:-8px;margin-right:-8px"
  >
    <div
      class="wmstool-col-8"
      style="padding-left:8px;padding-right:8px"
    >
      <div
        class="wmstool-card"
      >
        <div
          class="wmstool-card-head"
        >
          <div
            class="wmstool-card-head-wrapper"
          >
            <div
              class="wmstool-card-head-title"
            >
              Card title
            </div>
          </div>
        </div>
        <div
          class="wmstool-card-body"
        >
          <div>
            Card content
          </div>
        </div>
      </div>
    </div>
    <div
      class="wmstool-col-8"
      style="padding-left:8px;padding-right:8px"
    >
      <div
        class="wmstool-card"
      >
        <div
          class="wmstool-card-head"
        >
          <div
            class="wmstool-card-head-wrapper"
          >
            <div
              class="wmstool-card-head-title"
            >
              Card title
            </div>
          </div>
        </div>
        <div
          class="wmstool-card-body"
        >
          <div>
            Card content
          </div>
        </div>
      </div>
    </div>
    <div
      class="wmstool-col-8"
      style="padding-left:8px;padding-right:8px"
    >
      <div
        class="wmstool-card"
      >
        <div
          class="wmstool-card-head"
        >
          <div
            class="wmstool-card-head-wrapper"
          >
            <div
              class="wmstool-card-head-title"
            >
              Card title
            </div>
          </div>
        </div>
        <div
          class="wmstool-card-body"
        >
          <div>
            Card content
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/card/demo/inner.md correctly 1`] = `
<div
  class="wmstool-card wmstool-card-bordered"
>
  <div
    class="wmstool-card-head"
  >
    <div
      class="wmstool-card-head-wrapper"
    >
      <div
        class="wmstool-card-head-title"
      >
        Card title
      </div>
    </div>
  </div>
  <div
    class="wmstool-card-body"
  >
    <div>
      <p
        style="font-size:14px;color:rgba(0, 0, 0, 0.85);margin-bottom:16px;font-weight:500"
      >
        Group title
      </p>
      <div
        class="wmstool-card wmstool-card-bordered wmstool-card-type-inner"
      >
        <div
          class="wmstool-card-head"
        >
          <div
            class="wmstool-card-head-wrapper"
          >
            <div
              class="wmstool-card-head-title"
            >
              Inner Card title
            </div>
            <div
              class="wmstool-card-extra"
            >
              <a
                href="#"
              >
                More
              </a>
            </div>
          </div>
        </div>
        <div
          class="wmstool-card-body"
        >
          <div>
            Inner Card content
          </div>
        </div>
      </div>
      <div
        class="wmstool-card wmstool-card-bordered wmstool-card-type-inner"
        style="margin-top:16px"
      >
        <div
          class="wmstool-card-head"
        >
          <div
            class="wmstool-card-head-wrapper"
          >
            <div
              class="wmstool-card-head-title"
            >
              Inner Card title
            </div>
            <div
              class="wmstool-card-extra"
            >
              <a
                href="#"
              >
                More
              </a>
            </div>
          </div>
        </div>
        <div
          class="wmstool-card-body"
        >
          <div>
            Inner Card content
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/card/demo/loading.md correctly 1`] = `
<div
  class="wmstool-card wmstool-card-loading wmstool-card-bordered"
  style="width:34%"
>
  <div
    class="wmstool-card-head"
  >
    <div
      class="wmstool-card-head-wrapper"
    >
      <div
        class="wmstool-card-head-title"
      >
        Card title
      </div>
    </div>
  </div>
  <div
    class="wmstool-card-body"
  >
    <div
      class="wmstool-card-loading-content"
    >
      <p
        class="wmstool-card-loading-block"
        style="width:94%"
      />
      <p>
        <span
          class="wmstool-card-loading-block"
          style="width:28%"
        />
        <span
          class="wmstool-card-loading-block"
          style="width:62%"
        />
      </p>
      <p>
        <span
          class="wmstool-card-loading-block"
          style="width:22%"
        />
        <span
          class="wmstool-card-loading-block"
          style="width:66%"
        />
      </p>
      <p>
        <span
          class="wmstool-card-loading-block"
          style="width:56%"
        />
        <span
          class="wmstool-card-loading-block"
          style="width:39%"
        />
      </p>
      <p>
        <span
          class="wmstool-card-loading-block"
          style="width:21%"
        />
        <span
          class="wmstool-card-loading-block"
          style="width:15%"
        />
        <span
          class="wmstool-card-loading-block"
          style="width:40%"
        />
      </p>
    </div>
  </div>
</div>
`;

exports[`renders ./components/card/demo/meta.md correctly 1`] = `
<div
  class="wmstool-card wmstool-card-bordered"
  style="width:300px"
>
  <div
    class="wmstool-card-cover"
  >
    <img
      alt="example"
      src="https://gw.alipayobjects.com/zos/rmsportal/JiqGstEfoWAOHiTxclqi.png"
    />
  </div>
  <div
    class="wmstool-card-body"
  >
    <div>
      <div
        class="wmstool-card-meta"
      >
        <div
          class="wmstool-card-meta-avatar"
        >
          <span
            class="wmstool-avatar wmstool-avatar-circle wmstool-avatar-image"
          >
            <img
              src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"
            />
          </span>
        </div>
        <div
          class="wmstool-card-meta-detail"
        >
          <div
            class="wmstool-card-meta-title"
          >
            Card title
          </div>
          <div
            class="wmstool-card-meta-description"
          >
            This is the description
          </div>
        </div>
      </div>
    </div>
  </div>
  <ul
    class="wmstool-card-actions"
  >
    <li
      style="width:33.333333333333336%"
    >
      <span>
        <i
          class="anticon anticon-setting"
        />
      </span>
    </li>
    <li
      style="width:33.333333333333336%"
    >
      <span>
        <i
          class="anticon anticon-edit"
        />
      </span>
    </li>
    <li
      style="width:33.333333333333336%"
    >
      <span>
        <i
          class="anticon anticon-ellipsis"
        />
      </span>
    </li>
  </ul>
</div>
`;

exports[`renders ./components/card/demo/simple.md correctly 1`] = `
<div
  class="wmstool-card wmstool-card-bordered"
  style="width:300px"
>
  <div
    class="wmstool-card-body"
  >
    <div>
      <p>
        Card content
      </p>
      <p>
        Card content
      </p>
      <p>
        Card content
      </p>
    </div>
  </div>
</div>
`;

exports[`renders ./components/card/demo/tabs.md correctly 1`] = `
<div>
  <div
    class="wmstool-card wmstool-card-bordered wmstool-card-contain-tabs"
    style="width:100%"
  >
    <div
      class="wmstool-card-head"
    >
      <div
        class="wmstool-card-head-wrapper"
      >
        <div
          class="wmstool-card-head-title"
        >
          Card title
        </div>
        <div
          class="wmstool-card-extra"
        >
          <a
            href="#"
          >
            More
          </a>
        </div>
      </div>
      <div
        class="wmstool-tabs wmstool-tabs-top wmstool-card-head-tabs wmstool-tabs-large wmstool-tabs-line"
      >
        <div
          class="wmstool-tabs-bar"
          role="tablist"
          tabindex="0"
        >
          <div
            class="wmstool-tabs-nav-container"
          >
            <span
              class="wmstool-tabs-tab-prev wmstool-tabs-tab-btn-disabled"
              unselectable="unselectable"
            >
              <span
                class="wmstool-tabs-tab-prev-icon"
              />
            </span>
            <span
              class="wmstool-tabs-tab-next wmstool-tabs-tab-btn-disabled"
              unselectable="unselectable"
            >
              <span
                class="wmstool-tabs-tab-next-icon"
              />
            </span>
            <div
              class="wmstool-tabs-nav-wrap"
            >
              <div
                class="wmstool-tabs-nav-scroll"
              >
                <div
                  class="wmstool-tabs-nav wmstool-tabs-nav-animated"
                >
                  <div
                    class="wmstool-tabs-ink-bar wmstool-tabs-ink-bar-animated"
                  />
                  <div
                    aria-disabled="false"
                    aria-selected="true"
                    class="wmstool-tabs-tab-active wmstool-tabs-tab"
                    role="tab"
                  >
                    tab1
                  </div>
                  <div
                    aria-disabled="false"
                    aria-selected="false"
                    class=" wmstool-tabs-tab"
                    role="tab"
                  >
                    tab2
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="wmstool-tabs-content wmstool-tabs-content-animated"
          style="margin-left:0%"
        >
          <div
            aria-hidden="false"
            class="wmstool-tabs-tabpane wmstool-tabs-tabpane-active"
            role="tabpanel"
          />
          <div
            aria-hidden="true"
            class="wmstool-tabs-tabpane wmstool-tabs-tabpane-inactive"
            role="tabpanel"
          />
        </div>
      </div>
    </div>
    <div
      class="wmstool-card-body"
    >
      <div>
        <p>
          content1
        </p>
      </div>
    </div>
  </div>
  <br />
  <br />
  <div
    class="wmstool-card wmstool-card-bordered wmstool-card-contain-tabs"
    style="width:100%"
  >
    <div
      class="wmstool-card-head"
    >
      <div
        class="wmstool-card-head-wrapper"
      />
      <div
        class="wmstool-tabs wmstool-tabs-top wmstool-card-head-tabs wmstool-tabs-large wmstool-tabs-line"
      >
        <div
          class="wmstool-tabs-bar"
          role="tablist"
          tabindex="0"
        >
          <div
            class="wmstool-tabs-nav-container"
          >
            <span
              class="wmstool-tabs-tab-prev wmstool-tabs-tab-btn-disabled"
              unselectable="unselectable"
            >
              <span
                class="wmstool-tabs-tab-prev-icon"
              />
            </span>
            <span
              class="wmstool-tabs-tab-next wmstool-tabs-tab-btn-disabled"
              unselectable="unselectable"
            >
              <span
                class="wmstool-tabs-tab-next-icon"
              />
            </span>
            <div
              class="wmstool-tabs-nav-wrap"
            >
              <div
                class="wmstool-tabs-nav-scroll"
              >
                <div
                  class="wmstool-tabs-nav wmstool-tabs-nav-animated"
                >
                  <div
                    class="wmstool-tabs-ink-bar wmstool-tabs-ink-bar-animated"
                  />
                  <div
                    aria-disabled="false"
                    aria-selected="true"
                    class="wmstool-tabs-tab-active wmstool-tabs-tab"
                    role="tab"
                  >
                    article
                  </div>
                  <div
                    aria-disabled="false"
                    aria-selected="false"
                    class=" wmstool-tabs-tab"
                    role="tab"
                  >
                    app
                  </div>
                  <div
                    aria-disabled="false"
                    aria-selected="false"
                    class=" wmstool-tabs-tab"
                    role="tab"
                  >
                    project
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="wmstool-tabs-content wmstool-tabs-content-animated"
          style="margin-left:0%"
        >
          <div
            aria-hidden="false"
            class="wmstool-tabs-tabpane wmstool-tabs-tabpane-active"
            role="tabpanel"
          />
          <div
            aria-hidden="true"
            class="wmstool-tabs-tabpane wmstool-tabs-tabpane-inactive"
            role="tabpanel"
          />
          <div
            aria-hidden="true"
            class="wmstool-tabs-tabpane wmstool-tabs-tabpane-inactive"
            role="tabpanel"
          />
        </div>
      </div>
    </div>
    <div
      class="wmstool-card-body"
    >
      <div>
        <p>
          article content
        </p>
      </div>
    </div>
  </div>
</div>
`;
